welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:4: error: illegal start of simple pattern
var case = 0
    ^Runner:19: error: '=' expected but '}' found.
	}
        ^