welcome.lessons.welcome.loopfor.LoopCourse.scala.code
var tour = 0
var etp = 0
var case = 0

for (tour <- 1 to 10 )
{
	for (etp <- 1 to 4)
	{
		for (case <- 1 to 8)
		{
			avance;
		}
		gauche;
	}
}
